Source/WebCore/css/CSSParser.h
@@ -160,6 +160,7 @@ namespace WebCore {
         bool parseDeprecatedGradient(RefPtr<CSSValue>&);
         bool parseLinearGradient(RefPtr<CSSValue>&, CSSGradientRepeat repeating);
         bool parseRadialGradient(RefPtr<CSSValue>&, CSSGradientRepeat repeating);
+        bool parseGradientColorStops(CSSParserValueList*, CSSGradientValue*, bool expectComma);
 
         PassRefPtr<CSSValueList> parseTransform();
         bool parseTransformOrigin(int propId, int& propId1, int& propId2, int& propId3, RefPtr<CSSValue>&, RefPtr<CSSValue>&, RefPtr<CSSValue>&);
